--- a/about.html
+++ b/about.html
@@ -20,9 +20,25 @@
                 <li><a href="contact.html">联系我们</a></li>
             </ul>
         </div>
-        <div class="content">
-            <div class="sidebar">
-                <!-- 侧边栏轮播图保持不变 -->
+          <div class="content">
+             <div class="carousel">
+            <div class="carousel-list">
+                <img class="carousel-item" src="https://img.picgo.net/2024/08/26/1000013070f21d9a5fada3e56f.md.jpg" alt="" />
+                <img class="carousel-item" src="https://img.picgo.net/2024/08/26/10000130720ac0e0119076405c.md.jpg" alt="" />
+                <img class="carousel-item" src="https://img.picgo.net/2024/08/26/1000013071b32014cd239d2162.md.jpg" alt="" />
+                <img class="carousel-item" src="https://img.picgo.net/2024/08/26/10000130739f0e00d2d187c2e4.md.jpg" alt="" />
+                <img class="carousel-item" src="https://img.picgo.net/2024/08/26/1000013074a1d79d0add056720.md.jpg" alt="" />
+                <img class="carousel-item" src="https://img.picgo.net/2024/08/26/100001308034c456c1974c5577.md.jpg" alt="" />
+                    <img class="carousel-item" src="https://img.picgo.net/2024/08/26/1000013084dca8366ea72cb533.jpg" alt="" />
+              
+            </div>
+            <div class="prev arrow">
+                <img src="https://img.picgo.net/2024/08/26/1000013077b6ad1d8b5f6aef8b.th.png" alt="" />
+            </div>
+            <div class="next arrow">
+                <img src="https://img.picgo.net/2024/08/26/10000130784492b29395fc01b9.th.png" alt="" />
+            </div>
+        </div>
             </div>
             <div class="main">
                 <h2>关于我们</h2>
