--- a/about.html
+++ b/about.html
@@ -153,6 +153,7 @@
                 <!-- 内容区域保持空白 -->
             </div>
         </div>
+        </div>
         <div class="clearfix"></div>
         <div class="footer">
             版权所有 &copy; 2024 Ethan讲师&新意科技
