--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>服务 - 运动讲师的领跑者 Ethan</title>
+    <title>联系我们- 运动讲师的领跑者 Ethan</title>
     <!-- 链接到相同的样式文件 -->
    <style>
         body {
@@ -149,7 +149,7 @@
             </div>
         </div>
             <div class="main">
-                <h2>我们的服务</h2>
+                <h2>联系我们</h2>
                 <!-- 内容区域保持空白 -->
             </div>
         </div>
