--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>联系我们- 运动讲师的领跑者 Ethan</title>
-    <!-- 链接到相同的样式文件 -->
-   <style>
+    <title>运动师的领跑者 Ethan</title>
+    <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -114,22 +113,21 @@
                 right: 0px;
             }
     </style>
-
 </head>
 <body>
-     <div class="nb_body">
+    <div class="nb_body">
         <div class="header">
             <div class="title">运动讲师的领跑者 Ethan</div>
         </div>
         <div class="nav2">
-            <ul>
+                       <ul>
                 <li><a href="index.html">首页</a></li>
                 <li><a href="about.html">关于</a></li>
                <li><a href="services.html">服务</a></li>
                 <li class="small selected"><a href="contact.html">联系我们</a></li>
             </ul>
         </div>
-       <div class="content">
+   <div class="content">
              <div class="carousel">
             <div class="carousel-list">
                 <img class="carousel-item" src="https://img.picgo.net/2024/08/26/10000130739f0e00d2d187c2e4.md.jpg" alt="" />
@@ -148,22 +146,20 @@
                 <img src="https://img.picgo.net/2024/08/26/10000130784492b29395fc01b9.th.png" alt="" />
             </div>
         </div>
+            </div>
             <div class="main">
                 <h2>联系我们</h2>
-                <!-- 内容区域保持空白 -->
+                <p>Ethan作为一名专业运动讲师，拥有丰富的教学经验和深厚的专业知识。曾参与珠海拱北鱼美人门店工作人员的体态讲座，为众多参与者提供了实用的运动指导和建议。注重培养学员的运动习惯，通过科学的方法帮助他们塑造健康体态。
+热爱运动，善于激发学员的运动热情。在教学过程中，注重个性化指导，根据每位学员的需求制定合适的训练计划。</p>
             </div>
         </div>
-</div>
-          <div class="clearfix"></div>
+        <div class="clearfix"></div>
         <div class="footer">
             版权所有 &copy; 2024 Ethan讲师&新意科技
-      
+        </div>
     </div>
-    </div>
-    <!-- 链接到相同的脚本文件 -->
-
 </body>
-       <script>
+    <script>
         const items = document.querySelectorAll('.carousel-item');
         // 当前显示的第几张轮播图
         let index = 3;
