--- a/about.html
+++ b/about.html
@@ -149,8 +149,9 @@
             </div>
             <div class="main">
                 <h2>关于</h2>
-                <p>Ethan作为一名专业运动讲师，拥有丰富的教学经验和深厚的专业知识。曾参与珠海拱北鱼美人门店工作人员的体态讲座，为众多参与者提供了实用的运动指导和建议。注重培养学员的运动习惯，通过科学的方法帮助他们塑造健康体态。
-热爱运动，善于激发学员的运动热情。在教学过程中，注重个性化指导，根据每位学员的需求制定合适的训练计划。</p>
+                <p>**Ethan**
+                    
+广州体育学院杰出校友，国家职业高级健身教练，AASFP亚洲体适能教练，国家一级足球运动员。十年磨一剑，他在健身领域积累了丰富的经验，擅长增肌、减脂、塑形及运动康复等。曾运营炫功场健身会所，担任共享之家智能休闲运动平台负责人，Ethan以卓越的领导力和专业技能引领行业潮流。2024年，他华丽转身，成为炼工场健身会所平台的职业经理人，继续书写健身事业的辉煌篇章。</p>
             </div>
         </div>
         <div class="clearfix"></div>
