--- a/services.html
+++ b/services.html
@@ -123,7 +123,7 @@
                     <ul>
                 <li><a href="index.html">首页</a></li>
                 <li><a href="about.html">关于</a></li>
-                <li class="small selected"><a href="services.html">服务</a></li>
+                <li class="small selected"><a href="services.html">成就</a></li>
                 <li><a href="contact.html">联系我们</a></li>
             </ul>
         </div>
@@ -148,9 +148,8 @@
         </div>
             </div>
             <div class="main">
-                <h2>服务</h2>
-                <p>Ethan作为一名专业运动讲师，拥有丰富的教学经验和深厚的专业知识。曾参与珠海拱北鱼美人门店工作人员的体态讲座，为众多参与者提供了实用的运动指导和建议。注重培养学员的运动习惯，通过科学的方法帮助他们塑造健康体态。
-热爱运动，善于激发学员的运动热情。在教学过程中，注重个性化指导，根据每位学员的需求制定合适的训练计划。</p>
+                <h2>成就</h2>
+                <p>在过去的十年里，Ethan凭借其卓越的专业技能和领导才能，在健身行业中取得了令人瞩目的成就。他成功地将炫功场健身会所打造成业内标杆，不仅提升了会所的知名度，还实现了业绩的稳步增长。作为共享之家智能休闲运动平台的负责人，他引领行业创新，推动了健身与科技的深度融合。如今，Ethan加入炼工场健身会所平台，以其独特的战略眼光和管理能力，必将带领该平台迈向新的高峰。</p>
             </div>
         </div>
         <div class="clearfix"></div>
