--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                        <ul>
                 <li><a href="index.html">首页</a></li>
                 <li><a href="about.html">关于</a></li>
-               <li><a href="services.html">服务</a></li>
+               <li><a href="services.html">成就</a></li>
                 <li class="small selected"><a href="contact.html">联系我们</a></li>
             </ul>
         </div>
