--- a/contact.html
+++ b/contact.html
@@ -148,10 +148,10 @@
         </div>
             </div>
             <div class="main">
-                <h2>联系我们</h2>
-                <p>Ethan作为一名专业运动讲师，拥有丰富的教学经验和深厚的专业知识。曾参与珠海拱北鱼美人门店工作人员的体态讲座，为众多参与者提供了实用的运动指导和建议。注重培养学员的运动习惯，通过科学的方法帮助他们塑造健康体态。
-热爱运动，善于激发学员的运动热情。在教学过程中，注重个性化指导，根据每位学员的需求制定合适的训练计划。</p>
-            </div>
+    <h2>联系我们</h2>
+    <img src="https://img.picgo.net/2024/08/27/100001313119c28e42cb00a71b.md.jpg" alt="Image8" style="display: block; margin: 0 auto;">
+</div>
+
         </div>
         <div class="clearfix"></div>
         <div class="footer">
