--- a/contact.html
+++ b/contact.html
@@ -149,6 +149,7 @@
             </div>
             <div class="main">
     <h2>联系我们</h2>
+                 <p>与Ethan连线</p>
     <img src="https://img.picgo.net/2024/08/27/100001313119c28e42cb00a71b.md.jpg" alt="Image8" style="display: block; margin: 0 auto;">
 </div>
 
